# auction-slon

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
backend/: .env  .gitignore  Cargo.toml  diesel.toml
backend/migrations/: 20230702121336_add_user_data.sql  20230702121337_add_user_data.sql  20230704082845_add_auction_items.sql  20230704082846_add_auction_items.sql  20230716110525_add_kv_storage.sql  20230719031801_add_sponsorships.sql
backend/migrations/2022-12-03-185651_simple_users/: up.sql
backend/src/: admin.rs  auction.rs  business.rs  data.rs  database.rs  handlers.rs  lib.rs  main.rs  test_data.rs  user.rs
backend/src/auction/: auction_event.rs  db_actions.rs  english.rs  japanese.rs  sync_handle.rs
backend/src/business/: data.rs  handlers.rs
backend/src/data/: internal.rs  models.rs  schema.rs  web.rs
common/: Cargo.toml  Makefile
common/src/: crypto.rs  data.rs  lib.rs  shared.rs
common/src/data/: diesel_sqlite.rs
communication/: Cargo.toml
communication/src/: admin_state.rs  lib.rs
communication/src/auction/: actions.rs  state.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/admin/: Cargo.toml  index.html
frontend/admin/src/: admin_ui.rs  main.rs
frontend/admin/src/admin_ui/: choose_item.rs  confirm_item.rs  holding_account_transfer.rs  item_sold.rs  setup.rs  show_bid_progress.rs
frontend/common/: Cargo.toml
frontend/common/src/: components.rs  layout.rs  lib.rs  screens.rs
frontend/common/src/screens/: fullscreen_message.rs
frontend/src/: components.rs  lib.rs  main.rs  websocket.rs
frontend/src/components/: buyer.rs  login.rs  other.rs  seller.rs
frontend/user/: Cargo.toml  index.html
frontend/user/src/: auction_view.rs  components.rs  main.rs
frontend/user/src/components/: bidding_screen.rs  item_sold.rs  show_item_before_bid.rs
frontend/user/src/components/bidding_screen/: english.rs  japanese.rs  sponsorship_edit.rs  sponsorship_mode_set.rs
frontend/user/src/screens/: fullscreen_message.rs
