[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
futures-util = "0.3.25"
pretty_env_logger = "0.4.0"
