[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["diesel_sqlite"] }

log = "0.4.14"
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
futures-util = "0.3.25"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.1"
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenvy = "0.15.6"
enum_primitive = "0.1.1"
