[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
tokio = { version = "1.28.2", features = ["full"] }
communication = { path = "../communication" }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tower-http = { version = "0.4.1", features = ["fs"] }
