[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
postcard = { version = "1.0.6", features = ["use-std"] }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[features]
rand = ["dep:rand"]
