[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
common = { path = "../common" }
communication = { path = "../../communication" }
yew-hooks = "0.2.0"
web-sys = { version = "0.3.64", features = ["Location", "Window", "Event"] }
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
gloo-storage = "0.2.2"
wasm-bindgen = "0.2.87"