[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
communication = { path = "../../communication" }
yew-hooks = "0.2.0"
web-sys = { version = "0.3.64" }
wasm-bindgen = "0.2.87"
